--- a/.github/workflows/score.yml
+++ b/.github/workflows/score.yml
@@ -2,7 +2,7 @@ name: Check Minimum Score
 
 on :
   pull_request:
-    branches: [ "main" ]
+    branches: [ "mainnn" ]
     paths-ignore:
       - 'data/**'
       - 'requirements.txt'
