--- a/.github/workflows/Train_test.yml
+++ b/.github/workflows/Train_test.yml
@@ -1,8 +1,8 @@
 name: Build_Push_Docker_And_Pull_DockerImagee
  
 on:
-  push:
-    branches: [ "main" ]
+  #push:
+    #branches: [ "main" ]
   pull_request:
     branches: ['main']
  
